feat: Added csrf token handling  file

--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,36],[],[[4,0,5,[6],[0,21,3,7],[]],[9,0,10,[6],[0,25,4,11],[]],[12,0,13,[6],[0,28,4,11],[]],[8,0,14,[6],[0,32,4,11],[]]],[],[4,0,4,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,39],[],[[4,0,5,[6],[0,28,4,7],[]],[10,0,11,[6],[0,32,2,8],[]],[12,0,13,[6],[0,34,2,8],[]],[9,0,14,[6],[0,36,2,8],[]]],[],[4,0,4,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/project/workspace/tests.robot","*tests.robot","*Create Product","*<p>Create a new product\x3c/p>","*CRUD","*No keyword with name 'Create Session' found.\n\nAlso teardown failed:\nVariable '${product_id}' not found.","*Delete Product","*Read Product","*<p>Read the created product\x3c/p>","*Variable '${csrf_token}' not found.","*Update Product","*<p>Update the created product\x3c/p>","*<p>Delete the created product\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/project/workspace/tests.robot","*tests.robot","*Create Product","*<p>Create a new product\x3c/p>","*CRUD","*Replacing variables from keyword return value failed: Variable '${csrf_token}' not found.\n\nAlso teardown failed:\nVariable '${product_id}' not found.","*Replacing variables from keyword return value failed: Variable '${csrf_token}' not found.","*Delete Product","*Read Product","*<p>Read the created product\x3c/p>","*Update Product","*<p>Update the created product\x3c/p>","*<p>Delete the created product\x3c/p>"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:00","fail":4,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":4,"label":"CRUD","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":4,"id":"s1","label":"Tests","name":"Tests","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1716821692472;
+window.output["baseMillis"] = 1716895153589;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 41;
+window.output["generated"] = 44;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
